--- a/app/src/main/res/layout/fragment_proceed.xml
+++ b/app/src/main/res/layout/fragment_proceed.xml
@@ -12,13 +12,13 @@
 
         <TextView
             android:id="@+id/goods_to_ship_TextView"
-            android:layout_width="315dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
             android:background="@drawable/edittext_background"
             android:fontFamily="@font/numans"
             android:gravity="center"
@@ -30,13 +30,13 @@
 
         <LinearLayout
             android:id="@+id/linearLayout2"
-            android:layout_width="315dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
             android:gravity="center"
             android:orientation="horizontal"
 
@@ -72,13 +72,13 @@
 
         <TextView
             android:id="@+id/opt_physical_pod_TextView"
-            android:layout_width="315dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
             android:background="@drawable/edittext_background"
             android:fontFamily="@font/numans"
             android:gravity="center"
@@ -105,12 +105,12 @@
 
         <Button
             android:id="@+id/est_fare_book_now_Button"
-            android:layout_width="315dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/button_background"
             android:fontFamily="@font/numans"
@@ -132,34 +132,34 @@
 
         <TextView
             android:id="@+id/pickoff_contact_TextView"
-            android:layout_width="315dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/edittext_background"
             android:fontFamily="@font/numans"
             android:gravity="center"
-            android:text="Select Pickoff Contact"
+            android:text="@string/select_pickoff_contact"
             app:layout_constraintBottom_toTopOf="@+id/dropoff_contact_TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/dropoff_contact_TextView"
-            android:layout_width="315dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginRight="24dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/edittext_background"
             android:fontFamily="@font/numans"
             android:gravity="center"
-            android:text="Select Dropoff Contact"
+            android:text="@string/select_dropoff_contact"
             app:layout_constraintBottom_toTopOf="@+id/est_fare_book_now_Button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
