--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,104 +7,186 @@
     android:id="@+id/loginLayout"
     tools:context=".Ui.LoginActivity">
 
-
-    <ImageView
-        android:id="@+id/mp_logo_ImageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:contentDescription="@string/micro_parcel_logo"
-        android:scaleType="centerInside"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/microparcel_logo" />
-
-    <EditText
-        android:id="@+id/customer_email_EditText"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:fontFamily="@font/numans"
-        android:gravity="center"
-        android:hint="@string/email_address"
-        android:importantForAutofill="no"
-        android:inputType="textEmailAddress"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mp_logo_ImageView"
-        tools:targetApi="o" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/customer_password_EditText"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:fontFamily="@font/numans"
-        android:gravity="center"
-        android:hint="@string/password"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/customer_email_EditText"
-        tools:targetApi="o" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/login_Button"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
-        android:background="@drawable/button_background"
-        android:fontFamily="@font/numans"
-        android:text="@string/login"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/customer_password_EditText" />
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/signup_act_TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/numans"
-        android:text="@string/new_user"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/forgot_pass_TextView"
-        app:layout_constraintStart_toStartOf="@+id/forgot_pass_TextView"
-        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_TextView" />
+                <ImageView
+                    android:id="@+id/mp_logo_image_View"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:contentDescription="@string/micro_parcel_logo"
+                    android:scaleType="centerInside"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/microparcel_logo" />
 
-    <TextView
-        android:id="@+id/forgot_pass_TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/numans"
-        android:text="@string/forgot_password"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/login_Button"
-        app:layout_constraintStart_toStartOf="@+id/login_Button"
-        app:layout_constraintTop_toBottomOf="@+id/login_Button" />
+                <EditText
+                    android:id="@+id/user_mob_EditText"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginRight="24dp"
+                    android:ems="10"
+                    android:fontFamily="@font/numans"
+                    android:gravity="center"
+                    android:background="@drawable/edittext_background"
+                    android:hint="@string/mobile_number"
+                    android:inputType="phone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/mp_logo_image_View"
+                    android:importantForAutofill="no" tools:targetApi="o" />
 
+                <Button
+                    android:id="@+id/get_otp_Button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginRight="24dp"
+                    android:text="@string/get_otp"
+                    android:textSize="20sp"
+                    android:background="@drawable/button_background"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/numans"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/user_mob_EditText" />
+
+                <EditText
+                    android:id="@+id/otp_code_EditText"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/edittext_background"
+                    android:ems="10"
+                    android:fontFamily="@font/numans"
+                    android:gravity="center"
+                    android:hint="@string/enter_code"
+                    android:visibility="invisible"
+                    android:inputType="number"
+                    app:layout_constraintBottom_toBottomOf="@+id/user_mob_EditText"
+                    app:layout_constraintEnd_toEndOf="@+id/user_mob_EditText"
+                    app:layout_constraintStart_toStartOf="@+id/user_mob_EditText"
+                    app:layout_constraintTop_toTopOf="@+id/user_mob_EditText"
+                    android:importantForAutofill="no" tools:targetApi="o"/>
+
+                <Button
+                    android:id="@+id/verify_and_login_Button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/verify_amp_login"
+                    android:fontFamily="@font/numans"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:visibility="invisible"
+                    android:background="@drawable/button_background"
+                    app:layout_constraintBottom_toBottomOf="@+id/get_otp_Button"
+                    app:layout_constraintEnd_toEndOf="@+id/get_otp_Button"
+                    app:layout_constraintStart_toStartOf="@+id/get_otp_Button"
+                    app:layout_constraintTop_toTopOf="@+id/get_otp_Button" />
+
+                <LinearLayout
+                    android:id="@+id/resend_mob_LinearLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="88dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginRight="24dp"
+                    android:orientation="horizontal"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/verify_and_login_Button">
+
+                    <Button
+                        android:id="@+id/change_mobile_no_Button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="1dp"
+                        android:layout_marginRight="1dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/edittext_background"
+                        android:fontFamily="@font/numans"
+
+                        android:text="@string/change_no"
+                        android:textStyle="bold"
+                        tools:ignore="ButtonStyle" />
+
+                    <Button
+                        android:id="@+id/resend_otp_Button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="1dp"
+                        android:layout_marginLeft="1dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/edittext_background"
+                        android:fontFamily="@font/numans"
+                        android:text="@string/resend_otp"
+                        android:textStyle="bold"
+                        tools:ignore="ButtonStyle" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/otp_countdown_TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="@font/numans"
+                    android:gravity="center"
+                    app:layout_constraintBottom_toTopOf="@+id/otp_code_EditText"
+                    app:layout_constraintEnd_toEndOf="@+id/otp_code_EditText" />
+
+                <ProgressBar
+                    android:id="@+id/auto_verify_ProgressBar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="20dp"
+                    android:visibility="invisible"
+                    android:layout_height="20dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/otp_code_EditText"
+                    app:layout_constraintStart_toStartOf="@+id/otp_code_EditText" />
+
+                <TextView
+                    android:id="@+id/auto_verify_TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginLeft="4dp"
+                    android:gravity="center"
+                    android:visibility="invisible"
+                    android:fontFamily="@font/numans"
+                    android:text="@string/auto_verifying_otp"
+                    app:layout_constraintBottom_toBottomOf="@+id/auto_verify_ProgressBar"
+                    app:layout_constraintStart_toEndOf="@+id/auto_verify_ProgressBar"
+                    app:layout_constraintTop_toTopOf="@+id/auto_verify_ProgressBar" />
+
+            </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
