--- a/app/src/main/res/layout/fragment_your_orders.xml
+++ b/app/src/main/res/layout/fragment_your_orders.xml
@@ -17,7 +17,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loading_orders_ProgressBar" />
+            app:layout_constraintTop_toBottomOf="@+id/loading_orders_ProgressBar" >
+
+        </android.support.v7.widget.RecyclerView>
 
         <ProgressBar
             android:id="@+id/loading_orders_ProgressBar"
@@ -28,5 +30,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/no_order_TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/no_orders"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/loading_orders_ProgressBar" />
+
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
